[gd_scene load_steps=77 format=2]

[ext_resource path="res://src/Actors/Bosses/BossAI.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Modules/Enemy/BossDamage.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Panda.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/secret1.res" type="SpriteFrames" id=4]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/Idle.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/Intro.gd" type="Script" id=7]
[ext_resource path="res://src/AchievementSystem/Achievements/SECRET3DEFEATED.tres" type="Resource" id=8]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=9]
[ext_resource path="res://src/Actors/NewStateMachine/NewSongPlayer.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/Bosses/BambooPandamonium/PandaAchievementHandler.gd" type="Script" id=11]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/DoubleDash.gd" type="Script" id=12]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/Lifesteal.gd" type="Script" id=13]
[ext_resource path="res://src/Sounds/OST - SecretBattle1 - Loop.ogg" type="AudioStream" id=14]
[ext_resource path="res://src/Sounds/OST - SecretBattle1 - Intro.ogg" type="AudioStream" id=15]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/WhirlwindPunch.gd" type="Script" id=16]
[ext_resource path="res://src/Sounds/HIT_BOSS.wav" type="AudioStream" id=17]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/floppy.png" type="Texture" id=18]
[ext_resource path="res://src/Effects/Textures/elec_particles.png" type="Texture" id=19]
[ext_resource path="res://src/Effects/Materials/crystal_particles.tres" type="Material" id=20]
[ext_resource path="res://src/Actors/MeleeEnemyAttack.gd" type="Script" id=21]
[ext_resource path="res://src/HUD/Secret_bar.png" type="Texture" id=22]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/VergilAttack.gd" type="Script" id=23]
[ext_resource path="res://src/Sounds/Vile - Defeat.ogg" type="AudioStream" id=24]
[ext_resource path="res://src/DialogSystem/Dialogs/Stages/Secret3_Dialogue.tres" type="Resource" id=25]
[ext_resource path="res://src/Actors/Bosses/BossStun.gd" type="Script" id=26]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/dps_hud.gd" type="Script" id=27]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/Floppy.gd" type="Script" id=28]
[ext_resource path="res://src/Levels/SigmaPalace/lightsource.tscn" type="PackedScene" id=29]
[ext_resource path="res://src/Effects/Textures/smoke.png" type="Texture" id=30]
[ext_resource path="res://src/Effects/Materials/x_dash_smoke.tres" type="Material" id=31]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/WindSlash.tscn" type="PackedScene" id=32]
[ext_resource path="res://src/Actors/Bosses/Lumine/afterImages.gd" type="Script" id=33]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/WhirlwindJump.gd" type="Script" id=34]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/WindProjectile.tscn" type="PackedScene" id=35]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/Windball.tscn" type="PackedScene" id=36]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/Desperation.gd" type="Script" id=37]
[ext_resource path="res://src/Sounds/56 - MMX - Enemy Death.wav" type="AudioStream" id=38]
[ext_resource path="res://src/Sounds/18 - MMX - X Fade Out.wav" type="AudioStream" id=39]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/BossDeath.gd" type="Script" id=40]
[ext_resource path="res://src/DialogSystem/Dialogs/Stages/Secret3_Def_Dialogue.tres" type="Resource" id=41]
[ext_resource path="res://src/Sounds/SecretBoss2 - Teleport.wav" type="AudioStream" id=42]
[ext_resource path="res://src/Sounds/LEMON_SHOT2.wav" type="AudioStream" id=43]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/Mantis - Jump.wav" type="AudioStream" id=44]
[ext_resource path="res://src/Sounds/Mantis - Dash.ogg" type="AudioStream" id=45]
[ext_resource path="res://src/Sounds/Mantis - Cut1.ogg" type="AudioStream" id=46]
[ext_resource path="res://src/Sounds/Mantis - Land.ogg" type="AudioStream" id=47]
[ext_resource path="res://src/Sounds/Antionion - GravityCrash.wav" type="AudioStream" id=48]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=49]
[ext_resource path="res://src/Sounds/Manowar - FlashPrepare.wav" type="AudioStream" id=50]
[ext_resource path="res://src/Sounds/Rooster - Land.ogg" type="AudioStream" id=51]
[ext_resource path="res://src/Sounds/Seraph - LaserReady.wav" type="AudioStream" id=52]

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 13, 23 )

[sub_resource type="CanvasItemMaterial" id=86]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=64]
extents = Vector2( 23, 22.5 )

[sub_resource type="RectangleShape2D" id=83]
extents = Vector2( 57.5, 7 )

[sub_resource type="RectangleShape2D" id=85]

[sub_resource type="CircleShape2D" id=84]
radius = 45.5247

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 18 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 18 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 18 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 18 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 18 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 18 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 18 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 18 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 18 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 18 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 18 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 18 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 18 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 18 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 18 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=81]
animations = [ {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CanvasItemMaterial" id=82]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[node name="Secret1" type="KinematicBody2D" groups=["Bosses"]]
z_index = 5
collision_layer = 0
script = ExtResource( 3 )
max_health = 160.0

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 1 )
time_between_attacks = Vector2( 0.2, 0.2 )
play_desperation_music = false

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 10 )
shape = SubResource( 63 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 9 )
z_index = 1
frames = ExtResource( 4 )
animation = "desperation"
frame = 19
playing = true
offset = Vector2( 0, 1 )
flip_h = true

[node name="smoke_dash" type="Particles2D" parent="animatedSprite"]
material = SubResource( 86 )
position = Vector2( 0, 29 )
z_index = 1
emitting = false
amount = 20
lifetime = 0.75
local_coords = false
process_material = ExtResource( 31 )
texture = ExtResource( 30 )

[node name="afterImages" type="Node" parent="animatedSprite"]
script = ExtResource( 33 )
frequency = 0.05
initial_color = Color( 1, 0, 0.654902, 0.262745 )
final_color = Color( 0.258824, 0.172549, 0.576471, 0 )

[node name="rayCast2D" type="RayCast2D" parent="animatedSprite"]
position = Vector2( 0, 4 )
cast_to = Vector2( 512, 0 )

[node name="rayCast2D2" type="RayCast2D" parent="animatedSprite"]
cast_to = Vector2( 0, 256 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, 10.5 )
shape = SubResource( 64 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.5, 3.5 )
scale = Vector2( 4.35, 4.25 )

[node name="Intro" type="Node2D" parent="."]
script = ExtResource( 7 )
dialogue = ExtResource( 25 )
bar = ExtResource( 22 )

[node name="BattleSong" type="AudioStreamPlayer" parent="Intro"]
pause_mode = 2
stream = ExtResource( 15 )
volume_db = -11.0
bus = "Music"
script = ExtResource( 10 )

[node name="loop" type="AudioStreamPlayer" parent="Intro/BattleSong"]
pause_mode = 2
stream = ExtResource( 14 )
bus = "Music"

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 6 )
conflicting_moves = [ "Anything" ]
animation = "Idle"

[node name="DoubleDash" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="downslash" type="Node2D" parent="DoubleDash"]
script = ExtResource( 21 )
active = false
active_duration = 0.05
owner_character = NodePath("../..")
damage_in_combo = 1.0

[node name="area2D" type="Area2D" parent="DoubleDash/downslash"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="DoubleDash/downslash/area2D"]
position = Vector2( 40.5, 34 )
shape = SubResource( 83 )

[node name="highslash" type="Node2D" parent="DoubleDash"]
script = ExtResource( 21 )
active = false
active_duration = 0.25
owner_character = NodePath("../..")
previous_combo = NodePath("../downslash")
damage_in_combo = 1.0

[node name="area2D" type="Area2D" parent="DoubleDash/highslash"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D2" type="CollisionShape2D" parent="DoubleDash/highslash/area2D"]
position = Vector2( 0, -43 )
shape = SubResource( 85 )

[node name="collisionShape2D" type="CollisionShape2D" parent="DoubleDash/highslash/area2D"]
position = Vector2( 40.5, -5.5 )
shape = SubResource( 84 )

[node name="dash" type="AudioStreamPlayer2D" parent="DoubleDash"]
stream = ExtResource( 45 )
volume_db = -5.0
max_distance = 600.0
bus = "SFX"

[node name="cut1" type="AudioStreamPlayer2D" parent="DoubleDash"]
stream = ExtResource( 46 )
volume_db = -4.0
pitch_scale = 1.5
max_distance = 600.0
bus = "SFX"

[node name="cut2" type="AudioStreamPlayer2D" parent="DoubleDash"]
stream = ExtResource( 46 )
volume_db = -7.0
pitch_scale = 0.85
max_distance = 600.0
bus = "SFX"

[node name="land" type="AudioStreamPlayer2D" parent="DoubleDash"]
stream = ExtResource( 47 )
volume_db = -10.0
max_distance = 600.0
bus = "SFX"

[node name="VergilAttack" type="Node2D" parent="."]
script = ExtResource( 23 )
_slash = ExtResource( 32 )

[node name="disappear" type="AudioStreamPlayer2D" parent="VergilAttack"]
pause_mode = 2
stream = ExtResource( 42 )
volume_db = -9.0
max_distance = 600.0
bus = "SFX"

[node name="slashes" type="AudioStreamPlayer2D" parent="VergilAttack"]
stream = ExtResource( 52 )
volume_db = -14.0
max_distance = 600.0
bus = "SFX"

[node name="WhirlwindPunch" type="Node2D" parent="."]
script = ExtResource( 16 )
_wind = ExtResource( 35 )
_ball = ExtResource( 36 )

[node name="punch" type="AudioStreamPlayer2D" parent="WhirlwindPunch"]
stream = ExtResource( 51 )
volume_db = -5.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 49 )

[node name="WhirlwindJump" type="Node2D" parent="."]
script = ExtResource( 34 )
_ball = ExtResource( 36 )

[node name="jump" type="AudioStreamPlayer2D" parent="WhirlwindJump"]
stream = ExtResource( 44 )
volume_db = -4.0
pitch_scale = 1.25
max_distance = 600.0
bus = "SFX"

[node name="shot_sound" type="AudioStreamPlayer2D" parent="WhirlwindJump"]
stream = ExtResource( 43 )
volume_db = -12.079
pitch_scale = 0.84
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="dash" type="AudioStreamPlayer2D" parent="WhirlwindJump"]
stream = ExtResource( 45 )
volume_db = -10.0
pitch_scale = 0.85
max_distance = 600.0
bus = "SFX"

[node name="land" type="AudioStreamPlayer2D" parent="WhirlwindJump"]
stream = ExtResource( 47 )
volume_db = -10.0
max_distance = 600.0
bus = "SFX"

[node name="Desperation" type="Node2D" parent="."]
script = ExtResource( 37 )
desperation_attack = true
_slash = ExtResource( 32 )

[node name="up1" type="AnimatedSprite" parent="Desperation"]
position = Vector2( -44, -32 )
frames = ExtResource( 4 )
animation = "d1"
frame = 1
playing = true
offset = Vector2( 0, 1 )
flip_h = true

[node name="down1" type="AnimatedSprite" parent="Desperation"]
position = Vector2( -87, 1 )
frames = ExtResource( 4 )
animation = "d3"
playing = true
offset = Vector2( 0, 1 )
flip_h = true

[node name="up2" type="AnimatedSprite" parent="Desperation"]
position = Vector2( -100, -54 )
frames = ExtResource( 4 )
animation = "d2"
playing = true
offset = Vector2( 0, 1 )
flip_h = true

[node name="down2" type="AnimatedSprite" parent="Desperation"]
position = Vector2( -151, -7 )
frames = ExtResource( 4 )
animation = "d4"
playing = true
offset = Vector2( 0, 1 )
flip_h = true

[node name="disappear" type="AudioStreamPlayer2D" parent="Desperation"]
pause_mode = 2
stream = ExtResource( 42 )
volume_db = -9.0
max_distance = 600.0
bus = "SFX"

[node name="charge" type="AudioStreamPlayer2D" parent="Desperation"]
stream = ExtResource( 48 )
volume_db = -8.0
pitch_scale = 0.9
max_distance = 600.0
bus = "SFX"

[node name="cuts_prepare" type="AudioStreamPlayer2D" parent="Desperation"]
stream = ExtResource( 50 )
volume_db = -6.0
pitch_scale = 0.35
max_distance = 600.0
bus = "SFX"

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 2 )
invulnerability_time = 0.1
max_flash_time = 0.35

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
pause_mode = 2
stream = ExtResource( 17 )
volume_db = -3.0
max_distance = 600.0
bus = "SFX"

[node name="dps" type="RichTextLabel" parent="Damage"]
visible = false
margin_left = -18.0
margin_top = -69.0
margin_right = 59.0
margin_bottom = -52.0
text = "0.0"
script = ExtResource( 27 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="BossStun" type="Node2D" parent="."]
script = ExtResource( 26 )
conflicting_moves = [ "BossDeath" ]
actions = [ "Event" ]
animation = "death"
horizontal_velocity = 120.0
jump_velocity = 150.0

[node name="AchievementHandler" type="Node" parent="."]
script = ExtResource( 11 )
defeated_any = false
gigacrush_kill = false
defeated = ExtResource( 8 )

[node name="Floppy" type="Node2D" parent="."]
position = Vector2( 44, 0 )
script = ExtResource( 28 )

[node name="sprite" type="AnimatedSprite" parent="Floppy"]
position = Vector2( -20, -5 )
frames = SubResource( 81 )
frame = 4
playing = true

[node name="particles2D" type="Particles2D" parent="Floppy"]
material = SubResource( 82 )
position = Vector2( -20, -5 )
amount = 6
lifetime = 0.5
local_coords = false
process_material = ExtResource( 20 )
texture = ExtResource( 19 )

[node name="light" parent="Floppy" instance=ExtResource( 29 )]
position = Vector2( -20, -5 )
z_index = 0
max_alpha = 1.0

[node name="Lifesteal" type="Node" parent="."]
script = ExtResource( 13 )

[node name="BossDeath" type="Node2D" parent="."]
script = ExtResource( 40 )
jump_velocity = 180.0
dialogue = ExtResource( 41 )

[node name="explosion" type="AudioStreamPlayer2D" parent="BossDeath"]
pause_mode = 2
stream = ExtResource( 38 )
volume_db = -0.553
max_distance = 600.0
attenuation = 0.951366
bus = "SFX"

[node name="sparks" type="AudioStreamPlayer2D" parent="BossDeath"]
pause_mode = 2
stream = ExtResource( 24 )
volume_db = -11.183
pitch_scale = 1.05
max_distance = 600.0
attenuation = 0.951366
bus = "SFX"

[node name="beam_out" type="AudioStreamPlayer2D" parent="BossDeath"]
stream = ExtResource( 39 )
volume_db = -6.555
max_distance = 600.0
bus = "SFX"

[connection signal="executed" from="Intro" to="Lifesteal" method="_on_Intro_executed"]
[connection signal="executed" from="DoubleDash" to="DoubleDash/highslash" method="reset_combo"]
[connection signal="dps" from="Damage" to="Damage/dps" method="_on_Damage_dps"]
